--- a/nasNetWorkStack.yml
+++ b/nasNetWorkStack.yml
@@ -1,3 +1,4 @@
+---
 Description:
   This template deploys a VPC, with 3 public and private subnets spread
   across three Availability Zones. It deploys an internet gateway, with a default
@@ -53,7 +54,7 @@ Parameters:
     AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
     # AllowedValues: [174.117.204.234/32, 142.59.115.166/32]
-      
+       
 Resources:
   VPC:
     Type: AWS::EC2::VPC
@@ -378,6 +379,25 @@ Resources:
         - Key: Name
           Value: !Sub ${EnvironmentName}-rds-sg
 
+# Elastic File System Security Group
+  EfsSg:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow http/https access from the backend ALB to backend webserver
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 2049
+          ToPort: 2049
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: !Ref VpcCIDR
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-efs-sg
+
 # Auditors Security Groups
   AudAlbSg:
     Type: AWS::EC2::SecurityGroup
@@ -405,7 +425,31 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-aud-alb-sg
-
+  NasNACL:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: !Sub ${EnvironmentName}-nacl
+  InboundRule:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref NasNACL
+      RuleNumber: 100
+      Protocol: -1
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      
+  OutboundRule:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref NasNACL
+      RuleNumber: 100
+      Protocol: -1
+      Egress: true
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
 #TODO: Continue from security - conclude ssh, rds, efs
 
 # NAT gateway
@@ -486,23 +530,6 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable3
       DestinationCidrBlock: "0.0.0.0/0"
       NatGatewayId: !Ref NATGateway3
-# Launch Template
-  
-  # AutoScaling Group
-  # Target Group
-  ELBTargetGroup:
-       Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
-       Properties:
-         HealthCheckIntervalSeconds: 6
-         HealthCheckTimeoutSeconds: 5
-         HealthyThresholdCount: 2
-         Port: 80
-         Protocol: HTTP
-         UnhealthyThresholdCount: 2
-         VpcId: !Ref CustomVPC
-         TargetType: instance
-  # Load Balanacer kkjdlkflkjf
-
 
 # Outputs
 Outputs:
