--- a/serverStack.yml
+++ b/serverStack.yml
@@ -28,7 +28,7 @@ Parameters:
   NetWorkStack:
     Type: String
     Description: NetworkStack
-    Default: nasNetWorkStack #exported stack name
+    Default: networkStack #exported stack name
       
   KeyName:
     Type: "AWS::EC2::KeyPair::KeyName"
@@ -66,38 +66,82 @@ Resources:
           Fn::Sub: "${NetWorkStack}-VPCID"
       TargetType: instance
 
-    # # Load Balanacer
-    # FrontEndAlb:
-    #       Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
-    #       Properties:
-    #         Subnets: !Ref PublicSubnet1
-    #         SecurityGroups:
-    #           - !Ref FrontAlbSg
-    #     ElbListener:
-    #     Type: 'AWS::ElasticLoadBalancingV2::Listener'
-    #     Properties:
-    #       DefaultActions:
-    #         - Type: forward
-    #           TargetGroupArn: !Ref ELBTargetGroup
-    #       LoadBalancerArn: !Ref FrontEndAlb
-    #       Port: 80
-    #       Protocol: HTTP
-    #     AsgConfig:
-    #       Type: AWS::AutoScaling::LaunchConfiguration
-    #       Properties:
-    #         InstanceType: !Ref InstanceType
-    #         SecurityGroups:
-    #         - !Ref FrontWebSg
-    #         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
-    #         UserData:
-    #           Fn::Base64: 
-    #             !Sub |
-    #               #!/bin/bash
-    #               yum update -y
-    #               yum install -y httpd
-    #               systemctl start httpd
-    #               systemctl enable httpd
-    #               echo "<html><body><h1>Welcome to Nas Finanacial ${AWS::Region}<h1></body></html>" > /var/www/html/index.html
+# Load Balanacer
+  FrontEndAlb:
+    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
+    Properties:
+        Name: "FrontEndAlb"
+        Scheme: "internet-facing"
+        Type: "application"
+        Subnets:
+          - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-PublicsubnetOneId"
+          - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-PublicsubnetTwoId"
+          - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-PublicsubnetThreeId"
+        SecurityGroups:
+          - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-FrontAlbSgId" 
+          
+        IpAddressType: "ipv4"
+        LoadBalancerAttributes: 
+          - 
+            Key: "access_logs.s3.enabled"
+            Value: "false"
+          - 
+            Key: "idle_timeout.timeout_seconds"
+            Value: "60"
+          - 
+            Key: "deletion_protection.enabled"
+            Value: "false"
+          - 
+            Key: "routing.http2.enabled"
+            Value: "true"
+          - 
+            Key: "routing.http.drop_invalid_header_fields.enabled"
+            Value: "false"
+  # HTTPSListener:
+  #   Type: "AWS::ElasticLoadBalancingV2::Listener"
+  #   Properties:
+  #       LoadBalancerArn: !Ref ApplicationLoadBalancer
+  #       Port: 443
+  #       Protocol: "HTTPS"
+  #       SslPolicy: "ELBSecurityPolicy-2016-08"
+  #       # Certificates: 
+  #       #   - 
+  #       #     CertificateArn: arn:aws:acm:eu-central-1:**************:certificate/*********************
+            
+  #       DefaultActions: 
+  #         - 
+  #           Order: 1
+  #           TargetGroupArn: !Ref Test1TargetGroup
+  #           Type: "forward"
+  # ElbListener:
+  #   Type: 'AWS::ElasticLoadBalancingV2::Listener'
+  #   Properties:
+  #     DefaultActions:
+  #       - Type: forward
+  #         TargetGroupArn: !Ref ELBTargetGroup
+  #     LoadBalancerArn: !Ref FrontEndAlb
+  #     Port: 80
+  #     Protocol: HTTP
+  # AsgConfig:
+  #   Type: AWS::AutoScaling::LaunchConfiguration
+  #   Properties:
+  #     InstanceType: !Ref InstanceType
+  #     SecurityGroups:
+  #     - !Ref FrontWebSg
+  #     ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
+  #     UserData:
+  #       Fn::Base64: 
+  #         !Sub |
+  #           #!/bin/bash
+  #           yum update -y
+  #           yum install -y httpd
+  #           systemctl start httpd
+  #           systemctl enable httpd
+  #           echo "<html><body><h1>Welcome to Nas Finanacial ${AWS::Region}<h1></body></html>" > /var/www/html/index.html
     #     AsgGroup:
     #       Type: AWS::AutoScaling::AutoScalingGroup
     #       DependsOn:
