--- a/serverStack.yml
+++ b/serverStack.yml
@@ -30,7 +30,11 @@ Parameters:
     Description: NetworkStack
     Default: networkStack #exported stack name
       
-
+  IamRoleStack:
+    Type: String
+    Description: IAM Roles and Permissions Stack
+    Default: IamRoleStack #exported stack name
+    
   KeyName:
     Type: "AWS::EC2::KeyPair::KeyName"
   
@@ -56,41 +60,15 @@ Mappings:
 # Target Group
 Resources:
 # Launch Template
-  NasSSMRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - ec2.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Description: ec2-ssm role for accessing the ec2-instance
-      ManagedPolicyArns: 
-        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
-        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
-      RoleName: ec2-ssm
-  
-  MyIamInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      InstanceProfileName: IamInstanceProfile
-      Path: "/"
-      Roles:
-        - !Ref NasSSMRole
-  
   NaslaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateName: frontend-web-LT 
       LaunchTemplateData:
         IamInstanceProfile:
-          Arn: !GetAtt
-          - MyIamInstanceProfile
-          - Arn
+          Arn:
+            Fn::ImportValue:
+              !Sub '${IamRoleStack}-Arn'
         DisableApiTermination: true
         ImageId:
           !FindInMap [RegionMap, !Ref AWS::Region, web]
@@ -119,9 +97,9 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref NaslaunchTemplate
         Version: !GetAtt NaslaunchTemplate.LatestVersionNumber
-      MaxSize: '4'
+      MaxSize: '5'
       MinSize: '1'
-      DesiredCapacity: '2'
+      DesiredCapacity: '3'
       VPCZoneIdentifier:
         - Fn::ImportValue:
               Fn::Sub: "${NetWorkStack}-PublicsubnetOneId"
@@ -183,6 +161,16 @@ Resources:
             Key: "routing.http.drop_invalid_header_fields.enabled"
             Value: "false"
 
+  ElbListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref ELBTargetGroup
+      LoadBalancerArn: !Ref FrontEndAlb
+      Port: 80
+      Protocol: HTTP
+
   # HTTPSListener:
   #   Type: "AWS::ElasticLoadBalancingV2::Listener"
   #   Properties:
@@ -199,22 +187,6 @@ Resources:
   #           Order: 1
   #           TargetGroupArn: !Ref Test1TargetGroup
   #           Type: "forward"
-  ElbListener:
-    Type: 'AWS::ElasticLoadBalancingV2::Listener'
-    Properties:
-      DefaultActions:
-        - Type: forward
-          TargetGroupArn: !Ref ELBTargetGroup
-      LoadBalancerArn: !Ref FrontEndAlb
-      Port: 80
-      Protocol: HTTP
-
-
-
-
-
-
-
 
 
   # HTTPSListener:
