--- a/serverStack.yml
+++ b/serverStack.yml
@@ -29,11 +29,16 @@ Parameters:
     Type: String
     Description: NetworkStack
     Default: networkStack #exported stack name
+  
+  FileSystemStack:
+    Type: String
+    Description: filesystemStack-EfsId
+    Default: filesystemStack #exported stack name
       
-  IamRoleStack:
+  PermissionStack:
     Type: String
     Description: IAM Roles and Permissions Stack
-    Default: IamRoleStack #exported stack name
+    Default: permissionStack #exported stack name
     
   KeyName:
     Type: "AWS::EC2::KeyPair::KeyName"
@@ -54,10 +59,6 @@ Mappings:
     ca-central-1:
       web: ami-0ee679ef733e3b8e7
       app: ami-017f4811a06d3e510
-# Launch Template
-  
-# AutoScaling Group
-# Target Group
 Resources:
 # Launch Template
   NaslaunchTemplate:
@@ -68,7 +69,7 @@ Resources:
         IamInstanceProfile:
           Arn:
             Fn::ImportValue:
-              !Sub '${IamRoleStack}-Arn'
+              !Sub '${PermissionStack}-Arn'
         DisableApiTermination: true
         ImageId:
           !FindInMap [RegionMap, !Ref AWS::Region, web]
@@ -84,7 +85,11 @@ Resources:
             yum install -y httpd
             systemctl start httpd
             systemctl enable httpd
-            echo '<center><h1 style="color:blue;font-size:300%;border:2px solid blue;background-color:lightgrey;">Welcome to NAS Financial Group </h1></center>' > /var/www/html/index.html
+            FileSystemStack:
+              Fn::ImportValue:
+                !Sub "${FileSystemStack}-EfsId"
+            echo '<center><h1 style="color:blue;font-size:300%;border:2px solid blue;background-color:lightgrey;">Welcome to NAS Financial Group ${FileSystemStack}</h1></center>' > /var/www/html/index.html
+            
 
   # AutoScaling Group
   NasASG:
@@ -187,24 +192,6 @@ Resources:
   #           Order: 1
   #           TargetGroupArn: !Ref Test1TargetGroup
   #           Type: "forward"
-
-
-  # HTTPSListener:
-  #   Type: "AWS::ElasticLoadBalancingV2::Listener"
-  #   Properties:
-  #       LoadBalancerArn: !Ref ApplicationLoadBalancer
-  #       Port: 443
-  #       Protocol: "HTTPS"
-  #       SslPolicy: "ELBSecurityPolicy-2016-08"
-  #       # Certificates: 
-  #       #   - 
-  #       #     CertificateArn: arn:aws:acm:eu-central-1:**************:certificate/*********************
-            
-  #       DefaultActions: 
-  #         - 
-  #           Order: 1
-  #           TargetGroupArn: !Ref Test1TargetGroup
-  #           Type: "forward"
   # ElbListener:
   #   Type: 'AWS::ElasticLoadBalancingV2::Listener'
   #   Properties:
@@ -214,34 +201,4 @@ Resources:
   #     LoadBalancerArn: !Ref FrontEndAlb
   #     Port: 80
   #     Protocol: HTTP
-  # AsgConfig:
-  #   Type: AWS::AutoScaling::LaunchConfiguration
-  #   Properties:
-  #     InstanceType: !Ref InstanceType
-  #     SecurityGroups:
-  #     - !Ref FrontWebSg
-  #     ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
-  #     UserData:
-  #       Fn::Base64: 
-  #         !Sub |
-  #           #!/bin/bash
-  #           yum update -y
-  #           yum install -y httpd
-  #           systemctl start httpd
-  #           systemctl enable httpd
-  #           echo "<html><body><h1>Welcome to Nas Finanacial ${AWS::Region}<h1></body></html>" > /var/www/html/index.html
-    #     AsgGroup:
-    #       Type: AWS::AutoScaling::AutoScalingGroup
-    #       DependsOn:
-    #         - ELBTargetGroup
-    #         - ElasticLoadBalancer
-    #       Properties:
-    #         #PropagateAtLaunch: 'true'
-    #         VPCZoneIdentifier: !Ref PublicSubnets
-    #         LaunchConfigurationName: !Ref AsgConfig
-    #         MinSize: '2'
-    #         MaxSize: '4'
-    #         HealthCheckGracePeriod: 300
-    #         MaxInstanceLifetime: 2592000
-    #         TargetGroupARNs:
-    #           - !Ref ELBTargetGroup
+  
